Fixed the navbar dropup being too wide

--- a/src/app/[locale]/components/Navbar.css
+++ b/src/app/[locale]/components/Navbar.css
@@ -11,6 +11,7 @@
     align-items: center;
     gap: 0.625rem;
     /* background: palegreen; */
+    max-width: min-content;
 }
 
 .menu-button-container {
